# identity-service

./: .dockerignore  .env.example  .gitignore  Agent.md  Cargo.toml  README.md  docker-compose.release.yml  docker-compose.source.yml
.github/workflows/: ci.yml
docker/: Dockerfile.release  Dockerfile.source  configure_debian_apt_mirror.sh
docs/: ARCHITECTURE.md  BUILD.md  DOCKER.md  INTEGRATION.md  MODULE_EXPANSION.md  MVP.md  SPEC.md  TECH_STACK.md  nextsession.md
frontend-test/: wrangler.toml
frontend-test/public/: app.js  index.html  styles.css
migrations/: 0001_mvp_identity_schema.up.sql
migrations/sqlite/: 0001_mvp_identity_schema.down.sql  0001_mvp_identity_schema.up.sql
scripts/: build_release.sh  deploy_frontend_test.sh  docker_start_release.sh  docker_start_source.sh
src/: lib.rs  main.rs
src/application/: auth.rs  bootstrap.rs  error.rs  identity_binding.rs  mod.rs  password_change.rs  provider_registry.rs  readiness.rs  session.rs  token.rs
src/config/: mod.rs
src/domain/: identity.rs  mod.rs  session.rs  token.rs  user.rs
src/infrastructure/: memory.rs  mod.rs  postgres.rs
src/infrastructure/postgres/: error.rs  health.rs  identity.rs  local_credential.rs  mapping.rs  migration.rs  mod.rs  password_change.rs  session.rs
src/infrastructure/sqlite/: error.rs  health.rs  identity.rs  mod.rs  (+5 more)
src/interfaces/: http.rs
src/providers/: local_password.rs  mod.rs  supabase.rs
src/security/: mod.rs
tests/: e2e_full_flow.rs  mvp_http.rs  postgres_repositories.rs  sqlite_repositories.rs
tests/fixtures/: jwt_private.pem  jwt_public.pem
