[package]
name = "identity-service"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = "0.8.9"
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["serde"] }
hmac = "0.13.0"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
parking_lot = "0.12.5"
rand = "0.10.1"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "uuid", "migrate", "macros"] }
subtle = "2.6.1"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = { version = "1.23.1", features = ["v4", "serde"] }

[dev-dependencies]
tower = "0.5.3"
